force-app/main/default/objects/Event_Contact_Role__c/Event_Contact_Role__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Internal_Event_Contact_Role_Compact_Layout</compactLayoutAssignment>
    <label>Event Contact Role</label>
    <nameField>
        <displayFormat>ECR-{000000}</displayFormat>
        <label>Event Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>