force-app/main/default/objects/Event_Contact_Role__c/fields/Assigned_Primary_Onsite_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Primary_Onsite_Staff__c</fullName>
    <formula>Event__r.Assigned_Primary_Onsite_Staff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Primary Onsite Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>