force-app/main/default/objects/Event_Contact_Role__c/fields/Contact_Role_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Notes__c</fullName>
    <label>Contact Role Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>