force-app/main/default/objects/Event_Contact_Role__c/fields/Date_and_Name_with_Link__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Name_with_Link__c</fullName>
    <formula>IF( ISBLANK(Event__r.Event_Start_Date__c)=false, 
  
     LPAD(TEXT(MONTH(Event__r.Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp; 
     LPAD(TEXT(DAY(Event__r.Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot; - &quot;&amp; 
     HYPERLINK(&quot;/&quot;&amp;Event__r.Id , Event__r.Name ), 

    &quot;Unscheduled - &quot;&amp;HYPERLINK(&quot;/&quot;&amp;Event__r.Id , Event__r.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date and Name (with Link)</label>
    <type>Text</type>
</CustomField>