force-app/main/default/objects/Event_Contact_Role__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula
  >IF( Internal_Contact__r.Email &lt;&gt; &quot;&quot;, Internal_Contact__r.Email, 

 IF( Contact__r.Email &lt;&gt; &quot;&quot;, Contact__r.Email, 

 null

 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>