force-app/main/default/objects/Event_Contact_Role__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Event Contact Roles</relationshipLabel>
    <relationshipName>Event_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>