force-app/main/default/objects/Event_Contact_Role__c/fields/Event_Director__c.field-meta.xml
<CustomField>
    <fullName>Event_Director__c</fullName>
    <formula
  >IF( Event__r.Event_Director_Lookup__c = null, &quot;Unassigned&quot;, Event__r.Event_Director_Lookup__r.FirstName &amp; &quot; &quot; &amp; Event__r.Event_Director_Lookup__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Director</label>
    <type>Text</type>
</CustomField>