force-app/main/default/objects/Event_Contact_Role__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula
  >IF( Internal_Contact__r.FirstName &lt;&gt; &quot;&quot;, Internal_Contact__r.FirstName, 

 IF( Contact__r.FirstName &lt;&gt; &quot;&quot;, Contact__r.FirstName, 

 null

 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>