force-app/main/default/objects/Event_Contact_Role__c/fields/Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Internal_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>