force-app/main/default/objects/Event_Contact_Role__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula
  >IF( Internal_Contact__r.LastName &lt;&gt; &quot;&quot;, Internal_Contact__r.LastName, 

 IF( Contact__r.LastName &lt;&gt; &quot;&quot;, Contact__r.LastName, 

 null

 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>