force-app/main/default/objects/Event_Contact_Role__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula
  >IF( Internal_Contact__r.MobilePhone  &lt;&gt; &quot;&quot;, Internal_Contact__r.MobilePhone ,

IF( Contact__r.MobilePhone &lt;&gt; &quot;&quot;, Contact__r.MobilePhone ,

null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>