force-app/main/default/objects/Event_Contact_Role__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula
  >IF( Internal_Contact__r.Phone &lt;&gt; &quot;&quot;, Internal_Contact__r.Phone,

IF( Contact__r.Phone &lt;&gt; &quot;&quot;, Contact__r.Phone,

null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>