force-app/main/default/objects/Event_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite Event Director</fullName>
            </value>
            <value>
                <fullName>Onsite Logistics Coordinator</fullName>
            </value>
            <value>
                <fullName>Onsite Registration Coordinator</fullName>
            </value>
            <value>
                <fullName>Onsite Sales Rep</fullName>
            </value>
            <value>
                <fullName>Onsite Event Admin Coordinator</fullName>
            </value>
            <value>
                <fullName>Onsite Client Relations Specialist</fullName>
            </value>
            <value>
                <fullName>Other Onsite Staff</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Event Champion</fullName>
            </value>
            <value>
                <fullName>Audio/Visual Contact</fullName>
            </value>
            <value>
                <fullName>Venue Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>