force-app/main/default/objects/Event_Contact_Role__c/fields/Role_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Role_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Select this if this role will not be used for this event. No Contact should be assigned to it, but the role record will remain for tracking and consistency.</inlineHelpText>
    <label>Role Not Needed</label>
    <type>Checkbox</type>
</CustomField>