force-app/main/default/objects/Event_Contact_Role__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula
  >IF( Internal_Contact__r.Title &lt;&gt; &quot;&quot;, Internal_Contact__r.Title, 

 IF( Contact__r.Title &lt;&gt; &quot;&quot;, Contact__r.Title, 

 null

 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>