force-app/main/default/objects/Event_Contact_Role__c/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <compactLayoutAssignment
  >Event_Contact_Role_Compact_Layout</compactLayoutAssignment>
    <description
  >Speakers and contacts not directly employed by e.Republic. Example: A/V Contacts, Senior Fellows, Moderators, Keynotes.</description>
    <label>Contact</label>
</RecordType>