force-app/main/default/objects/Event_Contact_Role__c/recordTypes/Internal_Contact.recordType-meta.xml
<RecordType>
    <fullName>Internal_Contact</fullName>
    <active>true</active>
    <compactLayoutAssignment
  >Internal_Event_Contact_Role_Compact_Layout</compactLayoutAssignment>
    <description
  >Onsite e.Republic Staff, including Sales, Event Directors, Logistics, Reg Coordinators, etc.</description>
    <label>Internal Contact</label>
</RecordType>