force-app/main/default/objects/Event_Contact_Role__c/listViews/All_Event_Contact_Roles.listView-meta.xml
<ListView>
    <fullName>All_Event_Contact_Roles</fullName>
    <columns>NAME</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event__c</columns>
    <columns>Primary__c</columns>
    <columns>Role__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Title__c</columns>
    <columns>Email__c</columns>
    <columns>Contact_Role_Notes__c</columns>
    <columns>Internal_Contact__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Event Contact Roles - All</label>
</ListView>