force-app/main/default/objects/Event_Contact_Role__c/listViews/All_Event_Onsite_Staff.listView-meta.xml
<ListView>
    <fullName>All_Event_Onsite_Staff</fullName>
    <columns>Event_Start_Date__c</columns>
    <columns>Event__c</columns>
    <columns>Primary__c</columns>
    <columns>Role__c</columns>
    <columns>Internal_Contact__c</columns>
    <columns>Title__c</columns>
    <columns>Email__c</columns>
    <columns>Contact_Role_Notes__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Contact_Role__c.Internal_Contact</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value
    >Onsite Event Director,Onsite Logistics Coordinator,Onsite Registration Coordinator,Onsite Sales Rep,Onsite Event Admin Coordinator,Onsite Client Relations Specialist,Other Onsite Staff</value>
    </filters>
    <filters>
        <field>Event_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Onsite Staff - All Time</label>
</ListView>