force-app/main/default/objects/Event_Contact_Role__c/listViews/Onsite_Staff_This_Year.listView-meta.xml
<ListView>
    <fullName>Onsite_Staff_This_Year</fullName>
    <columns>Event_Start_Date__c</columns>
    <columns>Event__c</columns>
    <columns>Primary__c</columns>
    <columns>Role__c</columns>
    <columns>Internal_Contact__c</columns>
    <columns>Title__c</columns>
    <columns>Email__c</columns>
    <columns>Contact_Role_Notes__c</columns>
    <columns>Role_Not_Needed__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event_Contact_Role__c.Internal_Contact</value>
    </filters>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value
    >Onsite Event Director,Onsite Logistics Coordinator,Onsite Registration Coordinator,Onsite Sales Rep,Onsite Event Admin Coordinator,Onsite Client Relations Specialist,Other Onsite Staff</value>
    </filters>
    <filters>
        <field>Event_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>Event_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR,NEXT_YEAR</value>
    </filters>
    <filters>
        <field>Event__c</field>
        <operation>notContain</operation>
        <value>Badge Scanner,Test</value>
    </filters>
    <label>All Onsite Staff - This Year &amp; Upcoming</label>
</ListView>